CSS: fix footer overflow in mobile view
The 1rem margin on the dates is overflowing the footer, adding a
horizontal scroll on mobile.

--- a/themes/nixcon-2024/assets/css/main.css
+++ b/themes/nixcon-2024/assets/css/main.css
@@ -153,10 +153,7 @@ footer > p {
 	}
 	#prev-editions {
 		display: flex;
-		justify-content: left;
-	}
-	#prev-editions > a {
-		margin-right: 1rem;
+		justify-content: space-between;
 	}
 }
 
